# tide

./: CONTRIBUTING.md  Cargo.toml  README.md  align.sh  resources.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
compiler/tidec/: Cargo.toml
compiler/tidec/src/: main.rs
compiler/tidec/tests/: printf_hello.rs  return_255.rs  return_42.rs  return_zero.rs
compiler/tidec/tests/common/: mod.rs
compiler/tidec_abi/: Cargo.toml
compiler/tidec_abi/src/: layout.rs  lib.rs  size_and_align.rs  target.rs
compiler/tidec_builder/: Cargo.toml
compiler/tidec_builder/src/: basic_block_builder.rs  builder_ctx.rs  function_builder.rs  lib.rs  unit_builder.rs
compiler/tidec_builder/tests/: integration_tests.rs
compiler/tidec_codegen_llvm/: Cargo.toml
compiler/tidec_codegen_llvm/src/: builder.rs  context.rs  entry.rs  lib.rs
compiler/tidec_codegen_llvm/tests/: pipeline_tests.rs
compiler/tidec_codegen_ssa/: Cargo.toml
compiler/tidec_codegen_ssa/src/: entry.rs  lib.rs  lir.rs  tir.rs  traits.rs
compiler/tidec_driver/: Cargo.toml
compiler/tidec_driver/src/: compile.rs  lib.rs
compiler/tidec_intern/: Cargo.toml
compiler/tidec_intern/src/: lib.rs
compiler/tidec_lir/src/: layout_ctx.rs  lir.rs  syntax.rs
compiler/tidec_log/: Cargo.toml
compiler/tidec_log/src/: lib.rs
compiler/tidec_tir/: Cargo.toml
compiler/tidec_tir/src/: alloc.rs  body.rs  ctx.rs  layout_ctx.rs  lib.rs  syntax.rs  tir.rs  ty.rs  visitor.rs
compiler/tidec_tir/tests/: ctx_tests.rs  layout_ctx_tests.rs  syntax_tests.rs  ty_tests.rs
compiler/tidec_utils/src/: idx.rs  (+4 more)
(+9 files in other folders)
