[package]
name = "tidec"
version = "0.1.0"
edition = "2021"

[dependencies]
# tidy-alphabetical-start
tidec_abi = { path = "../tidec_abi" }
tidec_builder = { path = "../tidec_builder" }
tidec_driver = { path = "../tidec_driver" }
tidec_tir = { path = "../tidec_tir" }
tidec_utils = { path = "../tidec_utils" }
tracing = "0.1.41"
# tidy-alphabetical-end
